Ajout de la section article

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
       </nav>
 
-    <header class="container mt-4 d-flex justify-content-between">
+    <header class="container mt-4 mb-3 d-flex justify-content-between">
         <div class="banner-info w-75">
             <div class="card mb-3 border-left-0 border-right-0">
                 <iframe class="card-img-top" height="450px" src="https://www.youtube.com/embed/w2Qx_Ee_XAY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -186,9 +186,43 @@
         </div>
     </header>
 
-    <main>
-        <section>
-            <!-- Actualites sur le covid -->
+    <main class="container mt-5">
+        <section class="local-article">
+            <h2 class="h3 mb-4 font-weight-bold">Actualites sur le covid-19</h2>
+            <div class="d-flex justify-content-between">
+                <div class="card w-25">
+                    <img src="assets/img/images.jpeg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <div class="card-title">
+                          <h3 class="h5 text-danger font-weight-bold">Mesure de prevention Covid-19</h3>
+                          <h4 class="h6 font-weight-bold">Conseil des ministre special covid-19</h4>
+                        </div>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+
+                <div class="card w-25">
+                    <img src="assets/img/images.jpeg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <div class="card-title">
+                          <h3 class="h5 text-danger font-weight-bold">Mesure de prevention Covid-19</h3>
+                          <h4 class="h6 font-weight-bold">Conseil des ministre special covid-19</h4>
+                        </div>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+
+                <div class="card w-25">
+                    <img src="assets/img/images.jpeg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <div class="card-title">
+                          <h3 class="h5 text-danger font-weight-bold">Mesure de prevention Covid-19</h3>
+                          <h4 class="h6 font-weight-bold">Conseil des ministre special covid-19</h4>
+                        </div>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section>
