Ajout de la section actualites extern

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Covid19</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <!-- <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -48,7 +49,8 @@
           </ul>
           <div class="help-covid d-flex align-items-center">
               <div class="cloche mr-2 font-size-2">
-                  <i class="fa fa-bell-o text-danger" aria-hidden="true"></i>
+                  <!-- <i class="fa fa-bell-o text-danger" aria-hidden="true"></i> -->
+                  <i class="far fa-bell text-danger"></i>
               </div>
                 <a class="contact-phone btn btn-success p-2 rounded-0" href="tel:1410">
                   <i class="fa fa-phone" aria-hidden="true"></i>
@@ -74,14 +76,14 @@
                     </div>
                   <div class="card-text d-flex justify-content-between">
                     <div class="banner-icons">
-                        <i class="fa fa-facebook-official text-primary mr-2 font-size-md" aria-hidden="true"></i>
-                        <i class="fa fa-whatsapp text-success mr-2 font-size-md" aria-hidden="true"></i>
+                        <i class="fab fa-facebook mr-2 text-primary font-size-md"></i>
+                        <i class="fab fa-whatsapp mr-2 font-size-md text-success"></i>
                         <i class="fa fa-share-alt font-size-md" aria-hidden="true"></i>
                     </div>
                     <div class="banner-valuation font-weight-bold">
-                        <span>25 <i class="fa fa-share-square-o" aria-hidden="true"></i></span>
+                        <span>25 <i class="fas fa-share-square"></i></span>
                         <span>115 likes</span>
-                        <span><i class="fa fa-heart-o" aria-hidden="true"></i></span>
+                        <span><i class="far fa-heart"></i></span>
                     </div>
                   </div>
                 </div>
@@ -99,7 +101,7 @@
                         <p class="small">Lorem, ipsum.</p>
                         <time class="small">Il y a 3 jours</time>
                         <p class="text-right">
-                            120 <i class="fa fa-heart-o" aria-hidden="true"></i>
+                            120 <i class="far fa-heart"></i></i>
                         </p>
                     </div>
                 </div>
@@ -112,7 +114,7 @@
                         <p class="small">Lorem, ipsum.</p>
                         <time class="small">Il y a 3 jours</time>
                         <p class="text-right">
-                            120 <i class="fa fa-heart-o" aria-hidden="true"></i>
+                            120 <i class="far fa-heart"></i></i>
                         </p>
                     </div>
                 </div>
@@ -225,7 +227,7 @@
             </div>
         </section>
 
-        <section class="game mt-5">
+        <section class="game mt-5 mb-4">
             <div class="banner-game container">
                 <img src="assets/img/airtel.png" class="w-100" alt="">
             </div>
@@ -277,8 +279,8 @@
                                 </div>
                               <div class="card-text d-flex justify-content-between">
                                 <div class="banner-icons">
-                                    <i class="fa fa-facebook-official text-primary mr-2 font-size-md" aria-hidden="true"></i>
-                                    <i class="fa fa-whatsapp text-success mr-2 font-size-md" aria-hidden="true"></i>
+                                    <i class="fab fa-facebook mr-2 text-primary font-size-md"></i>
+                                    <i class="fab fa-whatsapp mr-2 font-size-md text-success"></i>
                                     <i class="fa fa-share-alt font-size-md" aria-hidden="true"></i>
                                 </div>
                                 <div class="banner-valuation font-weight-bold">
@@ -383,8 +385,119 @@
             </div>
         </section>
 
-        <section>
-            <!-- Actualites exterieure -->
+        <section class="extern-article mt-5">
+            <h2 class="h3 mb-4 font-weight-bold">Actualites sur l'exterieur</h2>
+            <div class="row">
+                <div class="col-md-8 border-right">
+                    <div class="card mb-3">
+                        <div class="row no-gutters">
+                            <div class="col-md-4">
+                                <img src="assets/img/images.jpeg" class="card-img rounded-0" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <div class="card-title d-flex justify-content-between">
+                                        <div class="heading">
+                                            <h3 class="h5 text-danger font-weight-bold">Mesure de prevention Covid-19</h3>
+                                            <h4 class="h6 font-weight-bold">Conseil des ministre special covid-19</h4>
+                                        </div>
+                                        <a href="#" class="text-dark"><i class="fas fa-ellipsis-v"></i></i></a>
+                                    </div>
+
+                                    <p class="card-text text-secondary text-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta impedit quisquam hic aut sed neque in illo adipisci nobis minus amet iusto odio nihil nesciunt voluptates nostrum vel, optio iure.</p>
+
+                                    <div class="card-text d-flex justify-content-between">
+                                        <a href="#" class="font-weight-bold h5">Lire l'article</a>
+                                        <p><span class="mr-3">60 <i class="fas fa-book-open"></i></span><time>28,mars 2019</time></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card mb-3">
+                        <div class="row no-gutters">
+                            <div class="col-md-4">
+                                <img src="assets/img/images.jpeg" class="card-img rounded-0" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <div class="card-title d-flex justify-content-between">
+                                        <div class="heading">
+                                            <h3 class="h5 text-danger font-weight-bold">Mesure de prevention Covid-19</h3>
+                                            <h4 class="h6 font-weight-bold">Conseil des ministre special covid-19</h4>
+                                        </div>
+                                        <a href="#" class="text-dark"><i class="fa fa-ellipsis-v" aria-hidden="true"></i></a>
+                                    </div>
+
+                                    <p class="card-text text-secondary text-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta impedit quisquam hic aut sed neque in illo adipisci nobis minus amet iusto odio nihil nesciunt voluptates nostrum vel, optio iure.</p>
+
+                                    <div class="card-text d-flex justify-content-between">
+                                        <a href="#" class="font-weight-bold h5">Lire l'article</a>
+                                        <p><span class="mr-3">60 <i class="fas fa-book-open"></i></span><time>28,mars 2019</time></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card mb-3">
+                        <div class="row no-gutters">
+                            <div class="col-md-4">
+                                <img src="assets/img/images.jpeg" class="card-img rounded-0" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <div class="card-title d-flex justify-content-between">
+                                        <div class="heading">
+                                            <h3 class="h5 text-danger font-weight-bold">Mesure de prevention Covid-19</h3>
+                                            <h4 class="h6 font-weight-bold">Conseil des ministre special covid-19</h4>
+                                        </div>
+                                        <a href="#" class="text-dark"><i class="fa fa-ellipsis-v" aria-hidden="true"></i></a>
+                                    </div>
+
+                                    <p class="card-text text-secondary text-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta impedit quisquam hic aut sed neque in illo adipisci nobis minus amet iusto odio nihil nesciunt voluptates nostrum vel, optio iure.</p>
+
+                                    <div class="card-text d-flex justify-content-between">
+                                        <a href="#" class="font-weight-bold h5">Lire l'article</a>
+                                        <p><span class="mr-3">60 <i class="fas fa-book-open"></i></span><time>28,mars 2019</time></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <h3 class="h6 text-center text-danger font-weight-bold border py-2 rounded">Fakes news</h3>
+                    <div class="media p-1 bg-gray rounded mb-3">
+                        <img src="assets/img/img01.jpeg" class="mr-3 p-1" width="150px" height="100px" alt="...">
+                        <div class="media-body">
+                            <h5 class="mt-0 font-weight-bold">Le nescafe soigne le corona</h5>
+                            <p class="text-right">
+                                <a href="#" class="text-dark"><i class="fas fa-ellipsis-v mr-3"></i></a>
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="media p-1 bg-gray rounded mb-3">
+                        <img src="assets/img/img02.jpeg" class="mr-3 p-1" width="150px" height="100px" alt="...">
+                        <div class="media-body">
+                            <h5 class="mt-0 font-weight-bold">Le nescafe soigne le corona</h5>
+                            <p class="text-right">
+                                <a href="#" class="text-dark"><i class="fas fa-ellipsis-v mr-3"></i></a>
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="media p-1 bg-gray rounded mb-3">
+                        <img src="assets/img/scrabble.jpg" class="mr-3 p-1" width="150px" height="100px" alt="...">
+                        <div class="media-body">
+                            <h5 class="mt-0 font-weight-bold">Le nescafe soigne le corona</h5>
+                            <p class="text-right">
+                                <a href="#" class="text-dark"><i class="fas fa-ellipsis-v mr-3"></i></a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
