--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
                         </div>
                     </div>
 
-                    <div class="media p-1 bg-gray rounded mb-3">
+                    <div class="media p-1 bg-gray rounded mb-5">
                         <img src="assets/img/scrabble.jpg" class="mr-3 p-1" width="150px" height="100px" alt="...">
                         <div class="media-body">
                             <h5 class="mt-0 font-weight-bold">Le nescafe soigne le corona</h5>
@@ -495,6 +495,14 @@
                                 <a href="#" class="text-dark"><i class="fas fa-ellipsis-v mr-3"></i></a>
                             </p>
                         </div>
+                    </div>
+
+                    <div class="newsletter mt-5">
+                        <h2 class="h3 mb-3 font-weight-bold text-center" >Newsletter</h2>
+                        <form class="form-inline ml-4">
+                            <input class="form-control mr-sm-2" type="email" placeholder="example@gmail.com" aria-label="example@gmail.com">
+                            <button class="btn btn-danger font-weight-bold my-2 my-sm-0" type="submit">S'inscrire</button>
+                        </form>
                     </div>
                 </div>
             </div>
