amelioration du contenue

--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
     <header class="container mt-4 mb-3 d-flex justify-content-between">
         <div class="banner-info w-75">
             <div class="card mb-3 border-left-0 border-right-0">
-                <iframe class="card-img-top" height="450px" src="https://www.youtube.com/embed/w2Qx_Ee_XAY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/ozvrHrjhW0o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <div class="card-body">
                     <div class="card-title d-flex justify-content-between align-items-end">
-                      <h2>Le Covid n'existe pas</h2>
+                      <h2>Coronavirus: 2 nouveaux cas au Gabon ! Point de Presse Secrétaire Général du Ministère de la Santé</h2>
                       <p class="small text-secondary">
                           <span>101 vues</span>
                           <span>25, mars 2018</span>
@@ -94,12 +94,12 @@
 
                 <div class="w-50 d-flex border-right">
                     <div class="col-md-6">
-                        <img src="assets/img/img01.jpeg" class="img-fluid" alt="">
+                        <img src="assets/img/AE-Alain-Claude-Bilie-By-Nze.jpg" class="img-fluid" alt="">
                     </div>
                     <div class="col-md-6">
-                        <h2 class="h6 font-weight-bold">Lorem ipsum dolor sit amet </h2>
-                        <p class="small">Lorem, ipsum.</p>
-                        <time class="small">Il y a 3 jours</time>
+                        <h2 class="h6 font-weight-bold">Fermeture des frontières : </h2>
+                        <p class="small">433 gabonais bloqués dans 17 pays à travers le monde</p>
+                        <time class="small">jeudi 2 avril 2020</time>
                         <p class="text-right">
                             120 <i class="far fa-heart"></i></i>
                         </p>
@@ -107,12 +107,12 @@
                 </div>
                 <div class="w-50 d-flex border-right">
                     <div class="col-md-6">
-                        <img src="assets/img/img01.jpeg" class="img-fluid" alt="">
+                        <img src="assets/img/Covid-19-test.jpg" class="img-fluid" alt="">
                     </div>
                     <div class="col-md-6">
-                        <h2 class="h6 font-weight-bold">Lorem ipsum dolor sit amet</h2>
-                        <p class="small">Lorem, ipsum.</p>
-                        <time class="small">Il y a 3 jours</time>
+                        <h2 class="h6 font-weight-bold">Covid-19 : </h2>
+                        <p class="small">3 nouveaux cas et un malade guéri (officiel)</p>
+                        <time class="small">jeudi 2 avril 2020</time>
                         <p class="text-right">
                             120 <i class="far fa-heart"></i></i>
                         </p>
@@ -268,7 +268,7 @@
                     <div class="covid-info mt-5">
                         <h2 class="text-secondary h5"><strong class="font-weight-bold text-dark">La Doc</strong> ~ Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, mollitia.</h2>
                         <div class="card mb-3 border-left-0 border-right-0">
-                            <iframe class="card-img-top" height="400px" src="https://www.youtube.com/embed/w2Qx_Ee_XAY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/ozvrHrjhW0o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             <div class="card-body">
                                 <div class="card-title d-flex justify-content-between align-items-end">
                                   <h2 class="font-weight-bold">Le Covid n'existe pas</h2>
