Amelioration du contenu

--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
     <header class="container mt-4 mb-3 d-flex justify-content-between">
         <div class="banner-info w-75">
             <div class="card mb-3 border-left-0 border-right-0">
-                <iframe class="card-img-top" height="450px" src="https://www.youtube.com/embed/w2Qx_Ee_XAY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="card-img-top" height="400px" src="https://www.youtube.com/embed/ozvrHrjhW0o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <div class="card-body">
                     <div class="card-title d-flex justify-content-between align-items-end">
-                      <h2>Le Covid n'existe pas</h2>
+                      <h2 class="font-weight-bold">Coronavirus: 2 nouveaux cas au Gabon !</h2>
                       <p class="small text-secondary">
                           <span>101 vues</span>
                           <span>25, mars 2018</span>
@@ -97,8 +97,8 @@
                         <img src="assets/img/img01.jpeg" class="img-fluid" alt="">
                     </div>
                     <div class="col-md-6">
-                        <h2 class="h6 font-weight-bold">Lorem ipsum dolor sit amet </h2>
-                        <p class="small">Lorem, ipsum.</p>
+                        <h2 class="h6 font-weight-bold">Fermeture des frontières</h2>
+                        <p class="small">433 gabonais bloqués dans 17 pays à travers le monde</p>
                         <time class="small">Il y a 3 jours</time>
                         <p class="text-right">
                             120 <i class="far fa-heart"></i></i>
@@ -107,11 +107,11 @@
                 </div>
                 <div class="w-50 d-flex border-right">
                     <div class="col-md-6">
-                        <img src="assets/img/img01.jpeg" class="img-fluid" alt="">
+                        <img src="assets/img/Covid-19-test.jpg" class="img-fluid" alt="">
                     </div>
                     <div class="col-md-6">
-                        <h2 class="h6 font-weight-bold">Lorem ipsum dolor sit amet</h2>
-                        <p class="small">Lorem, ipsum.</p>
+                        <h2 class="h6 font-weight-bold">Covid-19</h2>
+                        <p class="small">3 nouveaux cas et un malade guéri (officiel</p>
                         <time class="small">Il y a 3 jours</time>
                         <p class="text-right">
                             120 <i class="far fa-heart"></i></i>
@@ -240,8 +240,8 @@
                             <div class="game-card card text-white">
                                 <img src="assets/img/mots_meles.jpg" class="card-img" alt="...">
                                 <div class="card-img-overlay bg-darken d-flex flex-column justify-content-end">
-                                  <h5 class="card-title font-weight-bold">Card title</h5>
-                                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                  <h5 class="card-title font-weight-bold">Jeu des mots meles</h5>
+                                  <p class="card-text">Participer aux jeux meles du Covid-19</p>
                                 </div>
                             </div>
                         </div>
@@ -250,15 +250,15 @@
                             <div class="game-card card text-white">
                                 <img src="assets/img/scrabble.jpg" class="card-img" alt="...">
                                 <div class="card-img-overlay bg-darken d-flex flex-column justify-content-end">
-                                  <h5 class="card-title font-weight-bold">Card title</h5>
-                                  <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                                  <h5 class="card-title font-weight-bold">Des syllabes avec Covid</h5>
+                                  <p class="card-text"></p>
                                 </div>
                             </div>
 
                             <div class="game-card card text-white">
                                 <img src="assets/img/jeu-de-mot.jpg" class="card-img" alt="...">
                                 <div class="card-img-overlay bg-darken d-flex flex-column justify-content-end">
-                                  <h5 class="card-title font-weight-bold">Card title</h5>
+                                  <h5 class="card-title font-weight-bold">Jeu de mots</h5>
                                   <p class="card-text">Lorem ipsum dolor sit amet.</p>
                                 </div>
                             </div>
@@ -266,9 +266,9 @@
                     </div>
 
                     <div class="covid-info mt-5">
-                        <h2 class="text-secondary h5"><strong class="font-weight-bold text-dark">La Doc</strong> ~ Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, mollitia.</h2>
+                        <h2 class="text-secondary h5"><strong class="font-weight-bold text-dark">La Doc</strong> ~ Decouvrer l'actualite au gabon</h2>
                         <div class="card mb-3 border-left-0 border-right-0">
-                            <iframe class="card-img-top" height="400px" src="https://www.youtube.com/embed/w2Qx_Ee_XAY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe class="card-img-top" height="400px" src="https://www.youtube.com/embed/ozvrHrjhW0o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             <div class="card-body">
                                 <div class="card-title d-flex justify-content-between align-items-end">
                                   <h2 class="font-weight-bold">Le Covid n'existe pas</h2>
