Ajout du banner

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -6,11 +6,31 @@
     <title>Covid19</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="../assets/css/mobile.css">
 </head>
 <body>
 
     <header>
-        <!-- Notre header -->
+        <div class="banner container d-flex justify-content-between align-items-center my-3">
+            <div class="h4 p-0 m-0">
+                <span class="text-warning">Covid-19</span> <span class="text-primary">info</span>
+            </div>
+            <div class="divider bg-primary"></div>
+        </div>
+
+        <nav class="nav-mobile d-flex">
+            <a href="#" class="flex-fill text-center bg-primary text-white border-right font-weight-bold d-flex align-items-center justify-content-center">Actualites au Gabon</a>
+            <a href="#" class="flex-fill text-center bg-primary text-white border-right font-weight-bold d-flex align-items-center justify-content-center">Divertissement</a>
+            <a href="#" class="flex-fill text-center bg-primary text-white border-right font-weight-bold d-flex align-items-center justify-content-center">Hygienes & Sante</a>
+        </nav>
+
+        <div class="banner-img">
+            <img src="https://gaboninfoslive.files.wordpress.com/2016/07/sans-titre-00053.png" class="img-fluid" alt="">
+        </div>
+
+        <div class="d-flex justify-content-center text-center my-5">
+            <p class="text-primary font-weight-bold w-50">Informez vous sur le covid 19 et gagner de nombreux lots</p>
+        </div>
     </header>
 
     <main>
